# dsearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  db.cpp  dbmodel.cpp  dbmodel.h  dsearch_config.h.in  indexer.cpp  indexer.h  mainwindow.cpp  mainwindow.h  qt.conf  settings.cpp  settings.ui
.github/workflows/: build.yml
src/: db.h  dbmodel.cpp  indexer.h  mainwindow.ui  settings.cpp  settings.h  settings.ui
